--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -60,11 +60,12 @@
             <div class="education-card-col">
                 <div style="margin-left: 1rem; margin-right: 1rem;">
                     <h1 class="education-title">SDI Open Water Scuba Certification</h1>
-                    <h3 class="education-sub-title">New England Dive 202</h3>
+                    <h3 class="education-sub-title">New England Dive 2022</h3>
                     <p class="education-text">
                         • SDI Online Academic Course<br>
                         • Confined Water Training<br>
                         • Open Water Training<br>
+                        • Advanced Open Water Training<br>
                     </p>
                 </div>
             </div>
