--- a/src/app/gcd-calculator/gcd-calculator.component.html
+++ b/src/app/gcd-calculator/gcd-calculator.component.html
@@ -4,52 +4,47 @@
             <a class="button-text" routerLink="/portfolio"><span class="material-icons">
                 arrow_back
                 </span> Back to Portfolio</a>
-            <a class="button-text" href="https://github.com/andrewd1137/JavascriptGCDCalculator" target="_blank" rel="noopener noreferrer">View on GitHub!</a>
+                <a class="button-text" href="https://github.com/andrewd1137/JavascriptGCDCalculator" target="_blank" rel="noopener noreferrer">View on GitHub!</a>
         </div>
-        <h1 class="education-container main-headings">
+        <h1 class="project-container main-headings">
             Recursive GCD Calculator
         </h1>
     </div>
-    <div class="education-container">
-        <div class="card" style="width: 70%; border: none;">
-            <div class="row">
-              <div class="col">
+    <div class="project-container">
+        <div class="project-card">
+            <div style="min-width: 25%;">
                 <img src="../assets/images/projects/recursivegcdproj/recursivegcd.png" style="display: block; margin: auto;" class="img-fluid center-block">
-              </div>
-              <div class="col">
-                <div class="card-body">
-                    <h1 class="card-title">About</h1>
-                    <p class="card-text">
+            </div>
+            <div class="project-card-col">
+                <div style="margin-left: 1rem; margin-right: 1rem;">
+                    <h1 class="project-title">About</h1>
+                    <p class="project-text">
                         This is a simple project that will give you the Greatest Common Divisor between two numbers (x and y).
                         The project uses recursion to solve this. The way it does this is by calling the function again after it completes. It will keep doing this 
                         until it finds the GCD.
                     </p>
                 </div>
-              </div>
             </div>
-          </div>
+        </div>
     </div>
-    <hr class="hr-breaker">
-    <div class="education-container">
-        <div class="card" style="width: 50%; border: none;">
-            <div class="row">
-                <div class="col">
-                    <img src="../assets/images/projects/recursivegcdproj/technologies.jpg" style="display: block; margin: auto;" class="img-fluid center-block">
-                </div>
-                <div class="col">
-                    <div class="card-body">
-                        <h1 class="card-title">Language</h1>
-                        <p class="card-text">
-                            This program is written in javascript. Since this project is just a plain javascript file with no HTML or CSS, you will need
-                            a runtime environment in order to run the code. This is because javascript needs a runtime environment in order to execute the
-                            code writen. Typically, your browser provides this runtime environment, but in this case you can use Node to run the code without
-                            use of a browser. It makes the most sense to do this because this is a standalone js file that just uses the console and doesn't
-                            have any front end with it.
-                        </p>
-                    </div>
+    <div class="project-container">
+        <div class="project-card">
+            <div style="min-width: 25%;">
+                <img src="../assets/images/projects/recursivegcdproj/technologies.jpg" style="display: block; margin: auto;" class="img-fluid center-block">
+            </div>
+            <div class="project-card-col">
+                <div style="margin-left: 1rem; margin-right: 1rem;">
+                    <h1 class="project-title">Coding Language</h1>
+                    <p class="project-text">
+                        This program is written in javascript. Since this project is just a plain javascript file with no HTML or CSS, you will need
+                        a runtime environment in order to run the code. This is because javascript needs a runtime environment in order to execute the
+                        code writen. Typically, your browser provides this runtime environment, but in this case you can use Node to run the code without
+                        use of a browser. It makes the most sense to do this because this is a standalone js file that just uses the console and doesn't
+                        have any front end with it.
+                    </p>
                 </div>
             </div>
-          </div>
+        </div>
     </div>
     <div style="margin-top: 3rem;">
         <app-footer></app-footer>
