--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,5 @@
-<div>
-  <Label>"NOTICE: the portfolio page is not responsive and looks bad on smaller devices. I work full time haven't had the time to update it yet. Don't make fun of me :)</label>
-  <button (click)="showHideAlert()">OKAY</button> 
-</div>
-
 <div class="home-container">
-    <div [@transitionLeftState]="transition" class="home-box home-box-fill">
+    <div [@transitionLeftState]="transition" class="home-box">
         <span [@rubberBandState]="adventureStateA" class="box-main-text" 
             (mouseover)="changeAdventureTextA=true" (mouseout)="changeAdventureTextA=false">A
         </span>
@@ -76,7 +71,7 @@
 <div [@fadeInState]="fadeIn">
     <h3 class="projects-heading">Personal Favorite Projects</h3>
     <div class="card-group projects-container">
-        <div class="card projects-margin" style="border: none;">
+        <div class="card text-white bg-dark projects-margin" style="border: none;">
             <a class="projects-link" routerLink="/calculator">
                 <img src="../assets/images/projects/simplecalcproj/calcProject.png" width="100%" class="projects-img-border">
             </a>
@@ -86,7 +81,7 @@
                 +/- integers or decimals. You can also backspace if you make a typo and clear the calculator.</p>
             </div>
         </div>
-        <div class="card projects-margin" style="border: none;">
+        <div class="card text-white bg-dark projects-margin" style="border: none;">
             <a class="projects-link" routerLink="/my2cents">
                 <img src="../assets/images/projects/my2centsproj/my2cents.png" width="100%" class="projects-img-border">
             </a>
@@ -98,7 +93,7 @@
             </p>
           </div>
         </div>
-        <div class="card projects-margin" style="border: none;">
+        <div class="card text-white bg-dark projects-margin" style="border: none;">
             <a class="projects-link" routerLink="/marsproj">
                 <img src="../assets/images/projects/marsroverproj/marsroverimg.png" class="card-img-top projects-img-border">
             </a>
