--- a/src/app/mini-web-pack/mini-web-pack.component.css
+++ b/src/app/mini-web-pack/mini-web-pack.component.css
@@ -1,8 +1,7 @@
 .main-headings
 {
-    margin-top: 2rem;
     text-align: center;
-    font-size: 4rem;
+    word-break: keep-all;
 }
 
 .back-button
@@ -12,7 +11,6 @@
     background-color: gray;
     color: white;
     width: 50%;
-    font-size: 2rem;
     display: block;
     margin: auto;
     border-radius: 1rem;
@@ -26,18 +24,6 @@
     justify-content: center;
 }
 
-.button-text
-{
-    margin: 1rem;
-    padding: 0.5rem;
-    text-align: center;
-    text-decoration: none;
-    background-color: gray;
-    color: white;
-    font-size: 2rem;
-    border-radius: 1rem;
-}
-
 .button-text:hover
 {
     opacity: 50%;
@@ -48,9 +34,103 @@
     opacity: 50%;
 }
 
-.education-container
+.project-container
 {
     margin-top: 3rem;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+}
+
+.project-card-col
+{
+    flex-direction: column;
+}
+
+.project-title
+{
+    text-align: center;
+    word-break: keep-all;
+}
+
+/* media queries for responsive design */
+/* If the screen size is 801px wide or more */
+@media screen and (min-width: 801px) {
+    .button-text
+    {
+        font-size: 32px;
+        margin: 1rem;
+        padding: 0.5rem;
+        text-align: center;
+        text-decoration: none;
+        background-color: gray;
+        color: white;
+        border-radius: 1rem;
+    }
+    .project-card
+    {
+        width: 50%;
+        flex-direction: row;
+    }
+    .main-headings
+    {
+      font-size: 64px;
+    }
+    .project-title
+    {
+        font-size: 32px;
+    }
+    .project-text
+    {
+        font-size: 18px;
+    }
+    .calc-size
+    {
+        z-index: 100;
+        height: 300px; 
+        width: 450px;
+    }
+}
+  
+  /* If the screen size is 800px wide or less */
+@media screen and (max-width: 800px) {
+    .button-text
+    {
+        font-size: 24px;
+        margin: 1rem;
+        padding: 0.5rem;
+        text-align: center;
+        text-decoration: none;
+        background-color: gray;
+        color: white;
+        border-radius: 1rem;
+    }
+    .calc-size
+    {
+        margin: auto;
+        height: 200px; 
+        width: 300px;
+        z-index: 100;
+    }
+    .main-headings
+    {
+        font-size: 32px;
+    }
+    .project-title
+    {
+        font-size: 24px;
+    }
+    .calc-margin
+    {
+        margin-top: 7rem;
+    }
+    .project-text
+    {
+        font-size: 12px;
+    }
+    .project-card
+    {
+        margin: auto;
+        flex-direction: column;
+        text-align: center;
+    }
 }
