--- a/src/app/simple-calc-project/simple-calc-project.component.html
+++ b/src/app/simple-calc-project/simple-calc-project.component.html
@@ -79,4 +79,7 @@
             </div>
         </div>
     </div>
+    <div style="margin-top: 3rem;">
+        <app-footer></app-footer>
+    </div>
 </div>
